<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#CFE0FF"
            android:orientation="horizontal"
            android:elevation="2dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/text_repeater"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000" />
        </LinearLayout>
        <ScrollView
            android:id="@+id/vscroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/text_repeater"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/creator"
                    android:textSize="14sp"
                    android:textColor="#555555" />
                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayout1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                        <EditText
                            android:id="@+id/edittext_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:hint="@string/enter_text"
                            android:textColorHint="#9E9E9E"
                            tools:ignore="TextFields"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                        <EditText
                            android:id="@+id/edittext_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="4dp"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/_50"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:hint="@string/count"
                            android:textColorHint="#607D8B"
                            android:inputType="numberDecimal"
                            android:digits="1234567890"
                            android:maxLength="3"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_switches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Switch
                        android:id="@+id/switch_newline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/new_line"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />
                    <LinearLayout
                        android:id="@+id/linear2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="6dp"
                        android:padding="8dp"
                        android:background="#EEEEEE"
                        android:orientation="vertical" />
                    <Switch
                        android:id="@+id/switch_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/index"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialbutton_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="4dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/repeat"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="4dp"
                    style="@style/Widget.MaterialComponents.Button" />
                <LinearLayout
                    android:id="@+id/linear_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="#CFE0FF"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#000000" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linear_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/materialbutton_copy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/copy"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="4dp"
                        style="@style/Widget.MaterialComponents.Button" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/materialbutton_share"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="4dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/share"
                        android:textSize="14sp"
                        android:textColor="#000000"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:backgroundTint="@color/colorPrimary"
                        app:cornerRadius="4dp"
                        style="@style/Widget.MaterialComponents.Button" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
